Added new methods

--- a/src/classes/EmployeeTriggerHandler.cls
+++ b/src/classes/EmployeeTriggerHandler.cls
@@ -11,4 +11,8 @@ public class EmployeeTriggerHandler{
         String returnValue = (String) callFlow.getVariableValue('varOutput');
         System.debug('Flow returned ' + returnValue);        
     }
+	
+	public static fetchEmpName void(){
+		System.debug('--fetchEmpName--');
+	}
 }
