--- a/src/classes/sampleListCon.cls
+++ b/src/classes/sampleListCon.cls
@@ -20,5 +20,9 @@ public class sampleListCon {
             
         public void setCountries(String[] countries) {
             this.countries = countries;
+        }   
+		
+        public void fetchCountries() {
+            system.debug(---fetchCountries--);
         }
     }
